--- a/wars.html
+++ b/wars.html
@@ -14,14 +14,10 @@
 <body>
     <h1>Star Wars Profile</h1>
 
-    <div id='vehicles'></div>
-    <article class="mw5 center bg-white br3 pa3 pa4-ns mv3 ba b--black-10">
-        <div class="tc">
-          <img src="images/sandcrawler.png" class="br-100 h4 w4 dib ba b--black-05 pa2" title="Photo Sand Crawler">
-          <h1 class="f3 mb2">Sand Crawler</h1>
-          <h2 class="f5 fw4 gray mt0">Star Wars Sand Crawler</h2>
-        </div>
-      </article>
+   <div id="vehicles">
+      <section id="swapi-data"></section>
+    </div>
+
 </body>
 
 </html>
